# editor

./: .claude-notes.md  .gemini-audit-notes.md  .gemini-notes.md  .gitignore  1-CONTEXT.md  AGENTS.md  AI_GUIDE.md  AUDIT-2026-02-18.md  AUDIT-2026-02-19.md  AUDIT-2026-02-22_01.md  AUDIT-2026-02-22_02.md  AUDIT-2026-02-25_01.md  AUDIT-2026-02-25_02.md  AUDIT-2026-02-25_03.md  AUDIT-2026-02-25_REPAIR.md  AUDIT-AI-2026-02-28.md  AUDIT-GRAPH-2026-02-22.md  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  DONE.txt  FIX_REPORT.md  GEMINI.md  LICENSING.md  ROADMAPA.md  build.rs  check.sh  com.polycredo.Editor.yml  org.polycredo.Editor.yaml  report.md  run_limited.sh
.cargo/: config.toml
.github/workflows/: ci.yml  dev-release.yml
.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  STATE.md  completed-units.json
.gsd/milestones/M001/: M001-RESEARCH.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M002/: M002-CONTEXT.md  M002-RESEARCH.md  M002-ROADMAP.md  M002-SUMMARY.md
.gsd/milestones/M003/: M003-CONTEXT.md  M003-ROADMAP.md  M003-SUMMARY.md
.gsd/milestones/M004/: M004-CONTEXT.md  M004-RESEARCH.md  M004-ROADMAP.md  M004-SUMMARY.md
.gsd/milestones/M005/: M005-CONTEXT.md  M005-RESEARCH.md  M005-ROADMAP.md  M005-SUMMARY.md
.gsd/milestones/M006/: M006-CONTEXT.md  M006-META.json  M006-RESEARCH.md  M006-ROADMAP.md  M006-SUMMARY.md
.gsd/milestones/M007/: M007-CONTEXT.md  M007-RESEARCH.md  M007-ROADMAP.md  M007-SUMMARY.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  agent-history.json  v1.0.6-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3.0-v1.3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 31-ollama-in-ai-terminal.md  ai-chat-input-visibility.md  ctrl-w-unsaved-guard-mutates-content.md  git-cmd-single-line.md  no-slash-autocomplete.md  sandbox-staged-gitignore.md  sandbox-tooltip-small.md  status-bar-text-too-light-in-light-mode.md  terminal-frame-remains-pure-black-in-light-mode.md  terminal-wipe-on-sandbox-switch.md  unsaved-guard-esc-focus.md  unsaved-queue-target-order.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.0.2-MILESTONE-AUDIT.md  v1.0.2-REQUIREMENTS.md  v1.0.6-REQUIREMENTS.md  v1.0.6-ROADMAP.md  v1.1.0-MILESTONE-AUDIT.md  v1.1.0-REQUIREMENTS.md  v1.2.0-MILESTONE-AUDIT.md  v1.2.0-REQUIREMENTS.md  v1.2.0-ROADMAP.md  v1.2.1-REQUIREMENTS.md  v1.2.1-ROADMAP.md  v1.2.2-REQUIREMENTS.md  v1.2.2-ROADMAP.md  v1.3.0-MILESTONE-AUDIT.md  v1.3.0-REQUIREMENTS.md  v1.3.1-MILESTONE-AUDIT.md  v1.3.1-REQUIREMENTS.md  v1.3.1-ROADMAP.md
.planning/phases/01-repaint-gate/: 01-PLAN-ACCESSKIT.md
.planning/phases/01-zaklad/: 01-01-PLAN.md  01-02-SUMMARY.md  01-04-PLAN.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-background-isolation/: 01-CONTEXT.md  02-PLAN-TERMINAL-BATCH-WRITE.md  03-PLAN-UI-ASYNC-BATCHING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning_old_backup/: PROJECT.md  ROADMAP.md  STATE.md
.planning_old_backup/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  SUMMARY.md
.polycredo/: .profiles.toml.swp  profiles.toml
.polycredo/plugins/: gemini.wasm
.polycredo/sandbox/: .codex-notes.md  .gemini-notes.md  AGENTS.md  AUDIT-2026-02-18.md  AUDIT-2026-02-19.md  CHANGELOG.md  LSP.md  build.rs  parse_diff_test.rs  test
.polycredo/sandbox_old/: .gitignore  .ollama.json  CHANGELOG.md  com.polycredo.Editor.yml  fix_rag_indexing.md  org.polycredo.Editor.yaml  run_limited.sh
assets/syntaxes/: TOML.sublime-syntax
docs/: analyza.odt  analyza.txt  architecture-2026-02-21.md  architecture.txt  block-diagram.docx  block-diagram.txt  diagram.txt  duplicity.txt  editors-gemini.txt  navrh-codex.txt  navrh-gemini.txt  test.rs  test.txt  vize-codex.txt  vize-gemini.txt  vize.md  zatez.md
locales/cs/: ai.ftl  cli.ftl  dialogs.ftl  errors.ftl  menu.ftl  ui.ftl
locales/de/: ai.ftl  cli.ftl  dialogs.ftl  errors.ftl  menu.ftl  ui.ftl
locales/en/: ai.ftl  cli.ftl  dialogs.ftl  errors.ftl  menu.ftl  ui.ftl
locales/ru/: ai.ftl  cli.ftl  dialogs.ftl  errors.ftl  menu.ftl  ui.ftl
locales/sk/: ai.ftl  cli.ftl  dialogs.ftl  errors.ftl  menu.ftl  ui.ftl
packaging/deb/: README.md  build-deb.sh  config  copyright  polycredo-editor.desktop  polycredo-editor.metainfo.xml  postinst  postrm  rust-editor.desktop  templates  wrapper.sh
plugins/: gemini.toml  gemini.wasm
privacy/: Privacy_de.md  Privacy_ru.md  Privacy_sk.md
project/: factorial.rs
scripts/: build-all.sh
src/: app.rs  config.rs  editor.rs  file_tree.rs  highlighter.rs  i18n.rs  ipc.rs  main.rs  settings.rs  terminal.rs  watcher.rs
src/app/: ai_prefs.rs  build_runner.rs  dialogs.rs  fonts.rs  keymap.rs  local_history.rs  mod.rs  project_config.rs  sandbox.rs  startup.rs  trash.rs  types.rs  validation.rs  workspace.rs
tests/: phase30_plan01_cli02_audit.rs  phase30_plan01_foundation_imports.rs  phase30_plan01_namespace_bootstrap.rs  phase30_plan02_cli01_audit.rs  phase30_plan02_hard_removal.rs  phase30_plan02_readiness_gate.rs  phase30_plan04_ai_terminal_imports.rs  phase30_plan04_cli02_audit.rs  phase30_plan04_ollama_ui_removal.rs  phase32_namespace_guard.rs  phase32_runtime_stability.rs  phase33_removal_checks.sh  phase34_traceability_gate.sh  phase35_async_delete.rs  phase35_delete_foundation.rs  phase35_trash_path.rs  phase36_move_to_trash.rs  phase36_toast_propagation.rs  phase37_i18n_restore_parity.rs  phase37_restore_engine.rs  phase37_restore_ui_sync.rs  phase37_trash_preview_ui.rs  phase38_background_orchestration.rs  phase38_watcher_stability.rs
(+901 files in other folders)
