[package]
name = "polycredo-editor"
version = "0.4.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui_extras = { version = "0.31", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
notify = "7"
rfd = "0.15"
pulldown-cmark = "0.12"
egui_commonmark = "0.20"
egui_term = "0.1"
alacritty_terminal = "0.25"
dirs = "6"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
libc = "0.2"
fluent-bundle = "0.15"
unic-langid = "0.9"
walkdir = "2"

[patch.crates-io]
egui_term = { path = "vendor/egui_term" }
