[package]
name = "polycredo-editor"
version = "0.7.7"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui_extras = { version = "0.31", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
syntect = "5"
notify = "7"
rfd = "0.15"
regex = "1"
pulldown-cmark = "0.12"
egui_commonmark = { version = "0.20", features = ["better_syntax_highlighting"] }
egui_term = "0.1"
alacritty_terminal = "0.25"
dirs = "6"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
libc = "0.2"
fluent-bundle = "0.15"
unic-langid = "0.9"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-lsp = "0.2.2"
tower = { version = "0.4", features = ["full"] }
similar = "2.7.0"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
extism = "1.5"
anyhow = "1"



[patch.crates-io]
egui_term = { path = "vendor/egui_term" }
