[package]
name = "polycredo-editor"
version = "0.7.32"
edition = "2024"
authors = ["stkremen <stkremen@gmail.com>"]
description = "PolyCredo Editor — Local-first AI-powered editor for Rust and more."
license = "AGPL-3.0-or-later"
repository = "https://github.com/czsoftcode/editor"
homepage = "https://github.com/czsoftcode/editor"

[package.metadata.packager]
name = "polycredo-editor"
identifier = "io.github.czsoftcode.editor"
version = "0.7.32"
authors = ["stkremen <stkremen@gmail.com>"]
description = "PolyCredo Editor — Local-first AI-powered editor for Rust and more."
category = "Development"
copyright = "Copyright 2024-2026 stkremen"
icons = [
    "packaging/icons/icon.svg",
    "packaging/icons/icon-16.png",
    "packaging/icons/icon-32.png",
    "packaging/icons/icon-48.png",
    "packaging/icons/icon-64.png",
    "packaging/icons/icon-128.png",
    "packaging/icons/icon-256.png"
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/polycredo-editor", dest = "/usr/bin/polycredo-editor", mode = "755" },
    { source = "packaging/icons/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/polycredo-editor.png", mode = "644" },
    { source = "packaging/icons/icon-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/polycredo-editor.png", mode = "644" },
    { source = "packaging/icons/icon-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/polycredo-editor.png", mode = "644" },
    { source = "packaging/deb/polycredo-editor.desktop", dest = "/usr/share/applications/polycredo-editor.desktop", mode = "644" }
]

[package.metadata.packager.debian]
targets = ["deb"]
section = "devel"
priority = "optional"
depends = [
    "libc6",
    "libgcc-s1",
    "libx11-6",
    "libxcb1",
    "libxkbcommon0",
    "libwayland-client0",
    "libwayland-cursor0",
    "libwayland-egl1",
    "libegl1",
    "libgl1",
    "libssl3 | libssl1.1",
    "ripgrep",
    "debconf",
    "nsis",
    "rpm",
    "libfuse2",
    "dpkg-dev",
    "binutils",
    "fonts-dejavu-core",
    "fonts-noto-core",
    "fonts-noto-mono",
    "fonts-noto-color-emoji"
]

[package.metadata.packager.rpm]
targets = ["rpm"]
depends = ["ripgrep", "nsis", "dpkg", "binutils", "fuse"]

[package.metadata.packager.appimage]
targets = ["appimage"]

[package.metadata.packager.windows]
targets = ["nsis"]

# Universal source/binary archive for BSD and manual installs
[package.metadata.packager.archive]
targets = ["tar-gz"]

[package.metadata.winres]
RC = "llvm-rc"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui_extras = { version = "0.31", features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
syntect = "5"
notify = "7"
rfd = "0.15"
regex = "1"
pulldown-cmark = "0.12"
egui_commonmark = { version = "0.20", features = ["better_syntax_highlighting"] }
egui_term = "0.1"
alacritty_terminal = "0.25"
dirs = "6"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
libc = "0.2"
fluent-bundle = "0.15"
unic-langid = "0.9"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-lsp = "0.2.2"
tower = { version = "0.4", features = ["full"] }
similar = "2.7.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
extism = "1.5"
anyhow = "1"
bincode = "1.3"
smallvec = "1"
candle-core = "0.9"
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }
tokenizers = "0.21"
hf-hub = "0.4"
url = "2.5.8"

[patch.crates-io]
egui_term = { path = "vendor/egui_term" }
